--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Elm App</title>
+    <title>Compliance Ops</title>
+    <script src="//cdn.auth0.com/js/lock/10.0/lock.min.js"></script>
 </head>
 <body>
     <div id="root"></div>
