Fix the API port for dev.
Signed-off-by: Elliot Murphy <elliot@elliotmurphy.com>

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Compliance Ops</title>
     <script src="//cdn.auth0.com/js/lock/10.0/lock.min.js"></script>
+    <script src="//auth/js/keycloak.js"></script>
 </head>
 <body>
     <div id="root"></div>
