--- a/web/src/index.html
+++ b/web/src/index.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Compliance Ops</title>
-    <script src="//cdn.auth0.com/js/lock/10.0/lock.min.js"></script>
+    <title>Haven GRC</title>
     <script src="/auth/js/keycloak.js"></script>
 </head>
 <body>
