--- a/web/src/index.html
+++ b/web/src/index.html
@@ -3,7 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Compliance Ops</title>
+    <title>Haven GRC</title>
+    <meta name="description" content="Risk and Compliance Dashboard">
+    <meta name="HandheldFriendly" content="True">
+    <meta name="MobileOptimized" content="320">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="cleartype" content="on">
     <script src="//cdn.auth0.com/js/lock/10.0/lock.min.js"></script>
 </head>
 <body>
