Adjust viewport for mobile
Signed-off-by: Elliot Murphy <elliot@elliotmurphy.com>

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Haven GRC</title>
+    <meta name="description" content="Risk and Compliance Dashboard">
+    <meta name="HandheldFriendly" content="True">
+    <meta name="MobileOptimized" content="320">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="cleartype" content="on">
     <script src="/auth/js/keycloak.js"></script>
 </head>
 <body>
