--- a/web/src/index.html
+++ b/web/src/index.html
@@ -45,6 +45,37 @@
     <link rel="import" href="../bower_components/app-layout/app-toolbar/app-toolbar.html">
 
     <link rel="import" href="/bower_components/paper-button/paper-button.html">
+    <link rel="import" href="/bower_components/iron-icons/iron-icons.html">
+    <link rel="import" href="/bower_components/paper-icon-button/paper-icon-button.html">
+
+    <link rel="import" href="../bower_components/iron-selector/iron-selector.html">
+
+    <style is="custom-style">
+      body {
+        /* No margin on body so toolbar can span the screen */
+        margin: 0;
+      }
+      app-toolbar {
+        /* Toolbar is the main header, so give it some color */
+        background-color: #E86953;
+        font-family: 'Roboto', Helvetica, sans-serif;
+        color: white;
+        --app-toolbar-font-size: 24px;
+      }
+      .nav-menu > a {
+        display: block;
+        padding: 12px 16px;
+        font-size: 20px;
+        font-weight: 500;
+      }
+      .nav-menu > a.iron-selected {
+        background-color: #888;
+      }
+      .title-toolbar {
+        @apply --layout-center-center;
+        box-sizing: border-box;
+      }
+    </style>
 </head>
 <body>
     <div id="root"></div>
