--- a/web/src/index.html
+++ b/web/src/index.html
@@ -37,19 +37,20 @@
     </script>
     <link rel="import" href="/bower_components/polymer/polymer.html">
 
-    <link rel="import" href="../bower_components/app-layout/app-drawer-layout/app-drawer-layout.html">
-    <link rel="import" href="../bower_components/app-layout/app-drawer/app-drawer.html">
-    <link rel="import" href="../bower_components/app-layout/app-scroll-effects/app-scroll-effects.html">
-    <link rel="import" href="../bower_components/app-layout/app-header/app-header.html">
-    <link rel="import" href="../bower_components/app-layout/app-header-layout/app-header-layout.html">
-    <link rel="import" href="../bower_components/app-layout/app-toolbar/app-toolbar.html">
+    <link rel="import" href="/bower_components/app-layout/app-drawer-layout/app-drawer-layout.html">
+    <link rel="import" href="/bower_components/app-layout/app-drawer/app-drawer.html">
+    <link rel="import" href="/bower_components/app-layout/app-scroll-effects/app-scroll-effects.html">
+    <link rel="import" href="/bower_components/app-layout/app-header/app-header.html">
+    <link rel="import" href="/bower_components/app-layout/app-header-layout/app-header-layout.html">
+    <link rel="import" href="/bower_components/app-layout/app-toolbar/app-toolbar.html">
 
     <link rel="import" href="/bower_components/paper-button/paper-button.html">
     <link rel="import" href="/bower_components/iron-icons/iron-icons.html">
     <link rel="import" href="/bower_components/paper-icon-button/paper-icon-button.html">
+    <link rel="import" href="/bower_components/iron-icons/av-icons.html">
 
-    <link rel="import" href="../bower_components/iron-selector/iron-selector.html">
-
+    <link rel="import" href="/bower_components/iron-selector/iron-selector.html">
+    <!--  TODO migrate this CSS to SASS or elm-css outside this file -->
     <style is="custom-style">
       body {
         /* No margin on body so toolbar can span the screen */
@@ -62,18 +63,32 @@
         color: white;
         --app-toolbar-font-size: 24px;
       }
-      .nav-menu > a {
+      app-drawer {
+        / * TODO figure out why this background color isn't working */
+        background-color: #F3F4F4;
+      }
+      .nav-menu > div {
         display: block;
         padding: 12px 16px;
         font-size: 20px;
         font-weight: 500;
       }
-      .nav-menu > a.iron-selected {
+      #drawer > app-header-layout > iron-selector {
+        cursor: pointer;
+      }
+      #drawer > app-header-layout > iron-selector > div > iron-icon {
+        color: lightgray;
+      }
+      .nav-menu > div.iron-selected {
         background-color: #888;
       }
       .title-toolbar {
         @apply --layout-center-center;
         box-sizing: border-box;
+      }
+
+      [hidden] {
+        display: none;
       }
     </style>
 </head>
