Hide drawer icon when drawer is exposed.
Signed-off-by: Elliot Murphy <elliot@elliotmurphy.com>

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -85,15 +85,14 @@
       #drawer > app-header-layout > iron-selector > div > iron-icon {
         color: lightgray;
       }
+      app-drawer-layout:not([narrow]) [drawer-toggle] {
+        display: none;
+      }
       .nav-menu > div.iron-selected {
         background-color: #888;
       }
       #drawerlogo {
         @apply --layout-center-center;
-      }
-      .title-toolbar {
-        @apply --layout-center-center;
-        box-sizing: border-box;
       }
 
       [hidden] {
