Experiments with flex layout.
Signed-off-by: Elliot Murphy <elliot@elliotmurphy.com>

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -43,6 +43,8 @@
     <link rel="import" href="/bower_components/app-layout/app-header/app-header.html">
     <link rel="import" href="/bower_components/app-layout/app-header-layout/app-header-layout.html">
     <link rel="import" href="/bower_components/app-layout/app-toolbar/app-toolbar.html">
+    <link rel="import" href="bower_components/iron-flex-layout/iron-flex-layout.html">
+    <link rel="import" href="bower_components/iron-flex-layout/iron-flex-layout-classes.html">
 
     <link rel="import" href="/bower_components/paper-button/paper-button.html">
     <link rel="import" href="/bower_components/iron-icons/iron-icons.html">
@@ -52,9 +54,6 @@
     <link rel="import" href="/bower_components/ash-avatar/ash-avatar.html">
 
     <link rel="import" href="/bower_components/iron-selector/iron-selector.html">
-    <!--  TODO migrate this CSS to SASS or elm-css outside this file -->
-    <style is="custom-style">
-    </style>
 </head>
 <body>
     <div id="root"></div>
