--- a/web/src/index.html
+++ b/web/src/index.html
@@ -51,6 +51,9 @@
     <link rel="import" href="/bower_components/paper-icon-button/paper-icon-button.html">
     <link rel="import" href="/bower_components/iron-icons/av-icons.html">
     <link rel="import" href="/bower_components/iron-image/iron-image.html">
+    <link rel="import" href="/bower_components/iron-form/iron-form.html">
+    <link rel="import" href="/bower_components/paper-input/paper-input.html">
+    <link rel="import" href="/bower_components/paper-input/paper-textarea.html">
     <link rel="import" href="/bower_components/ash-avatar/ash-avatar.html">
 
     <link rel="import" href="/bower_components/iron-selector/iron-selector.html">
