--- a/web/src/index.html
+++ b/web/src/index.html
@@ -28,6 +28,12 @@
     <meta name="msapplication-TileImage" content="/img/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
 
+    <!-- Ported from HavenGRC landing page, candidate to refactor/consolidate -->
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
+    <script type="text/javascript" src="/js/retina.min.js"></script>
+    <script src="https://use.typekit.net/fru8myg.js"></script>
+    <script>try{Typekit.load({ async: true });}catch(e){}</script>
+    <!-- end ported from HavenGRC landing page -->
     <script src="/auth/js/keycloak.js"></script>
     <script src="/bower_components/webcomponentsjs/webcomponents-loader.js"></script>
     <script>
