--- a/web/src/index.html
+++ b/web/src/index.html
@@ -56,6 +56,7 @@
     <link rel="import" href="/bower_components/iron-icons/av-icons.html">
     <link rel="import" href="/bower_components/paper-input/paper-input.html">
     <link rel="import" href="/bower_components/paper-input/paper-textarea.html">
+    <link rel="import" href="/bower_components/paper-menu-button/paper-menu-button.html">
 
     <link rel="import" href="/bower_components/iron-selector/iron-selector.html">
 </head>
