Initial work on user avatar

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -59,6 +59,8 @@
     <link rel="import" href="/bower_components/paper-menu-button/paper-menu-button.html">
     <link rel="import" href="/bower_components/paper-listbox/paper-listbox.html">
     <link rel="import" href="/bower_components/paper-item/paper-item.html">
+    <link rel="import" href="/bower_components/paper-item/paper-icon-item.html">
+    <link rel="import" href="/bower_components/paper-avatar/paper-avatar.html">
 
     <link rel="import" href="/bower_components/iron-selector/iron-selector.html">
 </head>
