--- a/web/src/index.html
+++ b/web/src/index.html
@@ -51,18 +51,18 @@
     <link rel="import" href="/bower_components/app-layout/app-toolbar/app-toolbar.html">
 
     <link rel="import" href="/bower_components/paper-button/paper-button.html">
-    <link rel="import" href="/bower_components/iron-icons/iron-icons.html">
     <link rel="import" href="/bower_components/paper-icon-button/paper-icon-button.html">
-    <link rel="import" href="/bower_components/iron-icons/av-icons.html">
     <link rel="import" href="/bower_components/paper-input/paper-input.html">
     <link rel="import" href="/bower_components/paper-input/paper-textarea.html">
     <link rel="import" href="/bower_components/paper-menu-button/paper-menu-button.html">
     <link rel="import" href="/bower_components/paper-listbox/paper-listbox.html">
     <link rel="import" href="/bower_components/paper-item/paper-item.html">
-    <link rel="import" href="/bower_components/paper-item/paper-icon-item.html">
-    <link rel="import" href="/bower_components/paper-avatar/paper-avatar.html">
 
+    <link rel="import" href="/bower_components/iron-icons/iron-icons.html">
+    <link rel="import" href="/bower_components/iron-icons/av-icons.html">
     <link rel="import" href="/bower_components/iron-selector/iron-selector.html">
+    <link rel="import" href="/bower_components/iron-image/iron-image.html"
+
 </head>
 <body>
     <div id="root"></div>
