Removed all bootstrap, redesigned with Material Design
Signed-off-by: Lauren Behan <lauren.caitlan@gmail.com>

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -29,12 +29,12 @@
     <meta name="theme-color" content="#ffffff">
 
     <!-- Ported from HavenGRC landing page, candidate to refactor/consolidate -->
-    <link href="/css/bootstrap.min.css" rel="stylesheet">
-    <script type="text/javascript" src="/js/retina.min.js"></script>
     <script src="https://use.typekit.net/fru8myg.js"></script>
     <script>try{Typekit.load({ async: true });}catch(e){}</script>
     <!-- end ported from HavenGRC landing page -->
+    <link href="/css/material-components-web.min.css" rel="stylesheet">
     <script src="/auth/js/keycloak.js"></script>
+    <script src="/js/material-components-web.min.js"></script>
     <script src="/bower_components/webcomponentsjs/webcomponents-loader.js"></script>
     <script>
       window.Polymer = {
