--- a/swagger/index.html
+++ b/swagger/index.html
@@ -72,6 +72,7 @@
 window.onload = function() {
   // Build a system
   const ui = SwaggerUIBundle({
+    validatorUrl: undefined,
     url: "http://localhost:3001/",
     dom_id: '#swagger-ui',
     presets: [
