--- a/webui/public/index.html
+++ b/webui/public/index.html
@@ -28,13 +28,15 @@
     <meta name="msapplication-TileImage" content="%PUBLIC_URL%/img/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
 
+    <script src="%PUBLIC_URL%/js/material-components-web.min.js"></script>
     <!-- Ported from HavenGRC landing page, candidate to refactor/consolidate -->
     <script src="https://use.typekit.net/fru8myg.js"></script>
     <script>try{Typekit.load({ async: true });}catch(e){}</script>
     <!-- end ported from HavenGRC landing page -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="%PUBLIC_URL%/css/material-components-web.min.css" rel="stylesheet">
     <script src="%PUBLIC_URL%/auth/js/keycloak.js"></script>
-    <script src="%PUBLIC_URL%/js/material-components-web.min.js"></script>
+
     <script>
       window.Polymer = {
         dom: 'shadow'
@@ -44,5 +46,20 @@
 </head>
 <body>
     <div id="root"></div>
+    <script>
+      setTimeout(function() {
+        mdc.drawer.MDCPersistentDrawer.attachTo(document.getElementById('MenuDrawer'));
+        let drawer = new mdc.drawer.MDCPersistentDrawer(document.getElementById('MenuDrawer'));
+        document.getElementById('MenuButton').addEventListener('click', function() {
+          drawer.open = !drawer.open;
+        });
+
+        mdc.menu.MDCSimpleMenu.attachTo(document.getElementById('UserDropdownMenu'));
+        let menu = new mdc.menu.MDCSimpleMenu(document.getElementById('UserDropdownMenu'));
+        document.getElementById('UserDropdownButton').addEventListener('click', () => menu.open = !menu.open);
+
+        window.mdc.autoInit();
+      }, 1500);
+    </script>
 </body>
 </html>
