Two 'tooltip' buttons revealing a video using video.js
Signed-off-by: Lauren Behan <lauren.caitlan@gmail.com>

--- a/webui/public/index.html
+++ b/webui/public/index.html
@@ -30,12 +30,14 @@
 
     <script src="%PUBLIC_URL%/js/material-components-web.min.js"></script>
     <script src="%PUBLIC_URL%/js/arrive.min.js"></script>
+    <script src="%PUBLIC_URL%/js/video.min.js"></script>
     <!-- Ported from HavenGRC landing page, candidate to refactor/consolidate -->
     <script src="https://use.typekit.net/fru8myg.js"></script>
     <script>try{Typekit.load({ async: true });}catch(e){}</script>
     <!-- end ported from HavenGRC landing page -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="%PUBLIC_URL%/css/material-components-web.min.css" rel="stylesheet">
+    <link href="%PUBLIC_URL%/css/video-js.min.css" rel="stylesheet" />
     <script src="%PUBLIC_URL%/auth/js/keycloak.js"></script>
 
 
