Fix front page loading even when keycloak is down.
Signed-off-by: Elliot Murphy <statik@users.noreply.github.com>

--- a/webui/public/index.html
+++ b/webui/public/index.html
@@ -36,7 +36,7 @@
     <!-- end ported from HavenGRC landing page -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="%PUBLIC_URL%/css/material-components-web.min.css" rel="stylesheet">
-    <script src="%PUBLIC_URL%/auth/js/keycloak.js"></script>
+    <script src="%PUBLIC_URL%/js/keycloak.js"></script>
 
 
 </head>
