--- a/webui/public/index.html
+++ b/webui/public/index.html
@@ -30,7 +30,7 @@
 
     <script src="%PUBLIC_URL%/js/material-components-web.min.js"></script>
     <script src="%PUBLIC_URL%/js/arrive.min.js"></script>
-    <script src="%PUBLIC_URL%/pdf.js/build/pdf.js"></script>
+    <script src="%PUBLIC_URL%/js/pdf/build/pdf.js"></script>
     <!-- Ported from HavenGRC landing page, candidate to refactor/consolidate -->
     <script src="https://use.typekit.net/fru8myg.js"></script>
     <script>try{Typekit.load({ async: true });}catch(e){}</script>
