--- a/webui/public/index.html
+++ b/webui/public/index.html
@@ -54,6 +54,8 @@
     <div id="root"></div>
 
 
-
+    <div id="snackbar" class="snackbar">
+        <div id="snackbar-body" class="snackbar-body"></div>
+    </div>
 </body>
 </html>
