variabalizing daemonite-material via node script. removing unneeded css
Signed-off-by: David Streeter <dstreet26@gmail.com>

--- a/webui/public/index.html
+++ b/webui/public/index.html
@@ -39,7 +39,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- <link href="%PUBLIC_URL%/css/material-components-web.min.css" rel="stylesheet"> -->
     <!-- <link href="node_modules/daemonite-material/css/material.min.css" rel="stylesheet"> -->
-    <link href="%PUBLIC_URL%/css/material.min.css" rel="stylesheet">
+    <link href="%PUBLIC_URL%/css/custom.css" rel="stylesheet">
 
     <script src="%PUBLIC_URL%/js/keycloak.js"></script>
 
