swapping out CDNs for locally stored releases in webui

--- a/webui/public/index.html
+++ b/webui/public/index.html
@@ -35,10 +35,10 @@
 
     <script src="%PUBLIC_URL%/js/keycloak.js"></script>
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.bundle.js"></script>
+    <script src="%PUBLIC_URL%/js/jquery-3.3.1.slim.min.js"></script>
+    <script src="%PUBLIC_URL%/js/popper.min.js"></script>
+    <script src="%PUBLIC_URL%/js/bootstrap.min.js"></script>
+    <script src="%PUBLIC_URL%/js/Chart.bundle.js"></script>
     <script src="%PUBLIC_URL%/js/material.min.js"></script>
 
 </head>
