Can't figure out why swagger json files aren't getting served.
Signed-off-by: Elliot Murphy <statik@users.noreply.github.com>

--- a/swagger/index.html
+++ b/swagger/index.html
@@ -73,7 +73,7 @@ window.onload = function() {
   // Build a system
   const ui = SwaggerUIBundle({
     validatorUrl: undefined,
-    url: "http://localhost:3001/",
+    url: "http://localhost:2015/authenticated.json",
     dom_id: '#swagger-ui',
     presets: [
       SwaggerUIBundle.presets.apis,
