--- a/swagger/index.html
+++ b/swagger/index.html
@@ -73,7 +73,7 @@ window.onload = function() {
   // Build a system
   const ui = SwaggerUIBundle({
     validatorUrl: undefined,
-    url: "http://localhost:2015/authenticated.json",
+    url: "http://localhost:2015/swagger/authenticated.json",
     dom_id: '#swagger-ui',
     presets: [
       SwaggerUIBundle.presets.apis,
