--- a/webui/public/index.html
+++ b/webui/public/index.html
@@ -31,7 +31,7 @@
     <script src="%PUBLIC_URL%/js/pdf/build/pdf.js"></script>
     
     <script src="%PUBLIC_URL%/js/keycloak.js"></script>
-
+    <script src="%PUBLIC_URL%/js/arrive.min.js"></script>
     <script src="%PUBLIC_URL%/js/jquery-3.3.1.slim.min.js"></script>
     <script src="%PUBLIC_URL%/js/popper.min.js"></script>
     <script src="%PUBLIC_URL%/js/bootstrap.min.js"></script>
