Add lottie / bodymovin integration
Signed-off-by: Elliot Murphy <statik@users.noreply.github.com>

--- a/webui/public/index.html
+++ b/webui/public/index.html
@@ -39,6 +39,7 @@
     <script src="%PUBLIC_URL%/js/vega.min.js"></script>
     <script src="%PUBLIC_URL%/js/vega-lite.min.js"></script>
     <script src="%PUBLIC_URL%/js/vega-embed.js"></script>
+    <script src="%PUBLIC_URL%/js/lottie.min.js" type="text/javascript"></script>
 
 </head>
 <body>
