Total rewrite of navigation, Elm app works in dev again
Signed-off-by: Elliot Murphy <statik@users.noreply.github.com>

--- a/webui/public/index.html
+++ b/webui/public/index.html
@@ -44,7 +44,7 @@
 
 </head>
 <body>
-    <div id="root"></div>
+    <div id="elm"></div>
 
     <div id="snackbar" class="snackbar">
         <div id="snackbar-body" class="snackbar-body"></div>
