WIP unleash update.
Signed-off-by: Elliot Murphy <statik@users.noreply.github.com>

--- a/unleash/frontend/index.html
+++ b/unleash/frontend/index.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="unleash">
 
-    <title>Unleash UI</title>
-    <link rel="stylesheet" href="public/bundle.css">
+    <title>Unleash - Enterprise ready feature toggles</title>
+    <link rel="stylesheet" href="unleash/public/bundle.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
 </head>
 <body>
     <div id='app'></div>
-    <script src="public/bundle.js"></script>
+    <!-- modified path to prefix with unleash/ -->
+    <script src="unleash/public/bundle.js"></script>
 </body>
 </html>
