--- a/webui/public/index.html
+++ b/webui/public/index.html
@@ -39,6 +39,7 @@
     <script src="%PUBLIC_URL%/js/vega-embed.js"></script>
     <script src="%PUBLIC_URL%/js/arrive.min.js"></script>
     <script src="%PUBLIC_URL%/js/lottie.min.js" type="text/javascript"></script>
+    <script src="https://cdn.iubenda.com/iubenda.js"></script>
 
 </head>
 <body>
